<?xml version="1.0" encoding="utf-8"?>
<!-- Default string resources. The default language is English. -->
<resources>

    <string name="app_name">ClassHelper</string>
    <string name="action_settings">Settings</string>
    
    <string name="main_menu_title">Main Menu</string>
    
    <string name="student_crud">Students</string>
    <string name="toast_student_crud">Create some modules first</string>
    <string name="test_crud">Tests</string>
    <string name="toast_test_crud">Create some courses first</string>
    <string name="grade_crud">Grades</string>
    <string name="toast_grade_crud_student">Create some students first</string>
    <string name="toast_grade_crud_test">Create some tests first</string>
    <string name="course_crud">Courses</string>
    <string name="toast_course_crud">Create some modules first</string>
    <string name="module_crud">Modules</string>
    
    <string name="create_model">Create new item</string>
    <string name="delete_model">Delete</string>
    <string name="send_email">Send Email</string>
    <string name="create_report">Create PDF report</string>
    <string name="model_id_label">ID: </string>
    <string name="model_save_label">Save item</string>
    
    <string name="student_first_name_label">First Name</string>
    <string name="student_first_name_hint">Enter first name</string>
    <string name="student_last_name_label">Last Name</string>
    <string name="student_last_name_hint">Enter last name</string>
    <string name="student_phone_number_label">Phone Number</string>
    <string name="student_phone_number_hint">Enter phone number</string>
    <string name="student_email_label">Email</string>
    <string name="student_email_hint">Enter email</string>
    <string name="student_module_id_label">Module</string>
    
    <string name="module_name_label">Module Name</string>
    <string name="module_name_hint">Enter module name</string>
    
    <string name="course_name_label">Course Name</string>
    <string name="course_name_hint">Enter course name</string>
    <string name="course_module_id_label">Module</string>
    
    <string name="test_name_label">Test Name</string>
    <string name="test_name_hint">Enter test name</string>
    <string name="test_notes_label">Test Notes</string>
    <string name="test_notes_hint">Enter test notes</string>
    <string name="test_course_id_label">Course</string>
    
    <string name="grade_value_label">Grade</string>
    <string name="grade_value_hint">Enter grade value</string>
    <string name="grade_student_id_label">Student</string>
    <string name="grade_test_id_label">Test</string>
    
    <string name="toast_item_saved">Item Saved</string>
    
    <string name="empty_list_view">There are no items to display</string>
    
    <string name="email_subject_label">Email Subject</string>
    <string name="email_subject_hint">Enter Email Subject</string>
    <string name="email_body_label">Email Body</string>
    <string name="email_body_hint">Enter Email Content</string>
    <string name="email_recipient_list_label">Recipient List</string>
    <string name="email_send_label">Send Email</string>

</resources>
