<?xml version="1.0" encoding="utf-8"?>
<!-- ModulePagerFragment Layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- Module ID -->
    
    <TextView 
        android:id="@+id/module_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model_id_label"/>
    
    <!-- Module Name -->
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module_name_label"/>
    
    <EditText 
        android:id="@+id/module_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/module_name_hint"/>
    
    <!-- Save / Create module button -->
    
    <Button 
        android:id="@+id/module_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/model_save_label"/>

</LinearLayout>
